Email Sending feature

--- a/LoginPage/LoginPage.csproj
+++ b/LoginPage/LoginPage.csproj
@@ -81,6 +81,7 @@
     <Compile Include="DashboardPage.xaml.cs">
       <DependentUpon>DashboardPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Email.cs" />
     <Compile Include="FeedBackPage.xaml.cs">
       <DependentUpon>FeedBackPage.xaml</DependentUpon>
     </Compile>
