Added basic functionality to "Manage Templates" page

--- a/LoginPage/LoginPage.csproj
+++ b/LoginPage/LoginPage.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AddSectionWindow.xaml.cs">
       <DependentUpon>AddSectionWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Template.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="CreateCommentWindow.xaml.cs">
