--- a/LoginPage/LoginPage.csproj
+++ b/LoginPage/LoginPage.csproj
@@ -74,6 +74,9 @@
       <DependentUpon>AddSectionWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Applicant.cs" />
+    <Compile Include="CandidateManagement.xaml.cs">
+      <DependentUpon>CandidateManagement.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FeedbackSection.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="Comment.cs" />
@@ -107,6 +110,10 @@
     <Page Include="AReviewBT.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="CandidateManagement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CreateCommentWindow.xaml">
       <SubType>Designer</SubType>
