--- a/LoginPage/LoginPage.csproj
+++ b/LoginPage/LoginPage.csproj
@@ -77,6 +77,9 @@
     <Compile Include="CandidateManagement.xaml.cs">
       <DependentUpon>CandidateManagement.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CreateNewTemplate.xaml.cs">
+      <DependentUpon>CreateNewTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FeedbackSection.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="Comment.cs" />
@@ -120,6 +123,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CreateNewSectionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreateNewTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
